--- a/GoldenEmbedParser/build.xml
+++ b/GoldenEmbedParser/build.xml
@@ -28,6 +28,7 @@
     <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
       <manifest>
         <attribute name="Main-Class" value="${main-class}"/>
+        <attribute name="Class-Path" value="GoogleGeoTools.jar" />
       </manifest>
     </jar>
   </target>
