--- a/GoldenEmbedParser/.classpath
+++ b/GoldenEmbedParser/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry kind="lib" path="lib/google-api-client-1.3.1-alpha.jar"/>
 	<classpathentry kind="lib" path="lib/guava-r08.jar"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-client-1.9.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-core-1.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
